# baxter_commander

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: commander.rviz
launch/: commander.launch  move_group.launch
notebooks/: commander.ipynb  optitrack_robot_calibrator.ipynb
src/: transformations.py
src/baxter_commander/: __init__.py  commander.py  face.py  halo.py  joint_recorder.py  persistence.py  recorder.py  states.py  trajectories.py
src/transformations/: __init__.py  transformations.py
