<?xml version="1.0"?>
<package>
  <name>baxter_commander</name>
  <version>0.0.0</version>
  <description>Yet another overlay of the official Python SDK to control Baxter, coming with several operations on trajectories ensuring compatibility with Moveit types and tools</description>
  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <license>BSD</license>
  <url type="website">http://flowers.inria.fr</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!--<run_depend>baxter_pykdl</run_depend>-->
  <!--<run_depend>baxter_interface</run_depend>-->
  <!--<run_depend>baxter_core_msgs</run_depend>-->
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <!--<run_depend>moveit_msgs</run_depend>-->
  <!--<run_depend>trajectory_msgs</run_depend>-->
  <!--<run_depend>control_msgs</run_depend>-->
  <!--<run_depend>geometry_msgs</run_depend>-->
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
